--- a/YiYongjae1902/musicPlayer/ios/Podfile
+++ b/YiYongjae1902/musicPlayer/ios/Podfile
@@ -1,4 +1,4 @@
-platform :ios, '9.0'
+platform :ios, '10.0'
 require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
 
 target 'musicPlayer' do
@@ -26,6 +26,8 @@ target 'musicPlayer' do
   pod 'DoubleConversion', :podspec => '../node_modules/react-native/third-party-podspecs/DoubleConversion.podspec'
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
+
+  pod 'react-native-track-player', :path => '../node_modules/react-native-track-player'
 
   target 'musicPlayerTests' do
     inherit! :search_paths
