--- a/YiYongjae1902/musicPlayer/package.json
+++ b/YiYongjae1902/musicPlayer/package.json
@@ -8,8 +8,15 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "native-base": "^2.13.8",
     "react": "16.8.6",
-    "react-native": "0.60.5"
+    "react-native": "0.60.5",
+    "react-native-ionicons": "^4.6.1",
+    "react-native-router-flux": "^4.0.6",
+    "react-native-slider": "^0.11.0",
+    "react-native-swift": "^1.2.2",
+    "react-native-track-player": "^1.1.8",
+    "react-native-vector-icons": "^6.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.6.0",
