--- a/YiYongjae1902/musicPlayer/package.json
+++ b/YiYongjae1902/musicPlayer/package.json
@@ -8,6 +8,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/slider": "^2.0.0",
     "native-base": "^2.13.8",
     "react": "16.8.6",
     "react-native": "0.60.5",
